--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,7 +10,9 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="harlemShakeButton" data-dancer-maker-function-name="BlinkyDancer">do the harlem shake</a>    
+    </div>
     <script src="src/init.js"></script>
+    <img class="regularShawn" src="img/marcus.png">
   </body>
 </html>
