--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,9 +10,11 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="harlemShakeButton" data-dancer-maker-function-name="BlinkyDancer">do the harlem shake</a>    
+      <a href="#" class="harlemShakeButton">do the harlem shake</a>    
     </div>
     <script src="src/init.js"></script>
-    <img class="regularShawn" src="img/marcus.png">
+    <img class="regularShawn" src="img/regularshawn.png">
+    <audio id="intro" src="mp3/Harlem Shake.mp3" loop></audio>
+
   </body>
 </html>
